# py-cpp-lib

./: .gitignore  .gitpod.yml  CMakeLists.txt  README.md  config.h.in
.github/workflows/: build.yml
docker/gitpod/: Dockerfile
docker/ubuntu/: Dockerfile
docker/windows/: Dockerfile
include/: export.h  pyhello.h  pyhello.hpp  pyhelper.h  pyhelper.hpp
py/: hello.py
scripts/: externals.sh
src/: main.cpp  pyhello.cpp  pyhelper.cpp
